Fix layout issues in apps grid

--- a/css/appStyles.css
+++ b/css/appStyles.css
@@ -22,6 +22,7 @@
   border: none;
   border-radius: 5px;
   outline: 0;
+  width: 100%;
 }
 .input--accent {
   color: var(--color-accent);
@@ -76,6 +77,7 @@
 .calculator {
   display: inline-flex;
   max-width: 300px;
+  /* width: 0; */
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -168,12 +170,14 @@
 
 .dig-clock__time {
   background: var(--color-secondary);
-  margin: 1rem;
+  /* margin: 1rem; */
+  margin: 2px;
   border-radius: 5px;
   padding: 1.5rem 2rem;
   box-shadow: 0 5px 14px 1px #16161652;
   text-align: center;
-  min-width: 8rem;
+  /* min-width: 8rem; */
+  /* min-width: none; */
   font-size: 3rem;
 }
 
@@ -181,14 +185,28 @@
 
 .slide {
   box-shadow: 0 0 40px var(--color-secondary);
+  margin: 0;
+  /* width: 50%; */
+  /* width: 100px; */
+  /* width: 0; */
+}
+.slide.slider__top,
+.slide.slider__bottom {
+  margin: 0;
 }
 
 .slider {
   margin: 0 auto;
+  width: 80%;
+}
+
+.slider__content {
+  /* width: 10%; */
 }
 
 .slider__content img {
   width: 100%;
+
   height: 150px;
   object-fit: cover;
 }
@@ -211,6 +229,7 @@
   border-radius: 50px;
   padding: 3rem 2rem 2rem;
   margin: 0;
+  /* width: 80%; */
 }
 
 .details {
@@ -349,8 +368,9 @@ i.fa-step-backward {
 .board__heading {
   margin: 0;
   font-size: 1.8rem;
-  padding-top: 1rem;
-  padding-bottom: 1.5rem;
+  /* padding-top: 1rem;
+  padding-bottom: 1.5rem; */
+  padding: 1rem 0.5rem 1.5rem;
   text-align: center;
 }
 
@@ -377,11 +397,12 @@ i.fa-step-backward {
 .board__item {
   text-align: left;
   cursor: grab;
-  width: 20rem;
+  /* width: 20rem; */
   /* height: 2rem; */
   background: #3f4447;
   margin: 1rem;
   padding-left: 1rem;
+  padding-right: 1rem;
   font-weight: 400;
   border-radius: 3px;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
